data/derived/sp14/progs/unify/prog1355.ml.out
Characters 80-81:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> ('a -> 'c) -> 'c
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside ('a -> 'c) -> 'c
